# toepack

./: .gitattributes  README.md  cookiecutter.json  environment.yml  pyproject.toml  requirements.txt
{{cookiecutter.__project_slug}}/: .flake8  .gitattributes  .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  setup.py
{{cookiecutter.__project_slug}}/tests/: test_{{cookiecutter.__project_slug}}.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/: __init__.py  app.py
{{cookiecutter.project_name}}/: .flake8  .travis.yml  README.md  environment.yml  logging.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  app.py  headers.py  log_init.py  logging.json  {{cookiecutter.project_name}}.py
