[tool.poetry]
name = "toepack"
version = "0.2.7"
description = "Bare minimum Python project templating system based on Cookiecutter."
authors = ["Martin Uribe <clamytoe@gmail.com>"]

[tool.poetry.dependencies]
cookiecutter = "^1.6.0"
python = "^3.6.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
