[project]
name = "{{ cookiecutter.__project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]

license = { text = "MIT" }
dependencies = [
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_account}}/{{cookiecutter.__project_slug}}/"
Issues = "https://github.com/{{cookiecutter.github_account}}/{{cookiecutter.__project_slug}}/issues"


[project.scripts]
{{ cookiecutter.__project_slug }} = "{{ cookiecutter.__project_slug }}.app:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ---------------------------
# Tooling Configuration
# ---------------------------

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["D", "E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
